# Master-of-Codex

./: .gitignore  AGENTS.MD  Python AI 编码工具自动化设计.md  README.md  TODO.md  Windows 环境下使用 Python 脚本交互控制 Codex CLI.md  ai_orchestrator.py  pyproject.toml  requirements.txt
aiagent-orchestrator/: README.md  ai_orchestrator.py  pyproject.toml  requirements.txt
aiagent-orchestrator/src/ai_orchestrator/: __init__.py  __main__.py  cli.py  config.py  intelligence.py  process_manager.py  supervisor.py  workflow_manager.py
aiagent-orchestrator/tests/: test_config.py  test_process_manager_payload.py  test_process_manager_windows.py
aiagent-orchestrator/tests/manual/: manual_test_config.yml
tests/: test_config.py
tests/manual/: fake_ai_tool.py  manual_test_config.yml
