[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagent-orchestrator"
version = "0.1.0"
description = "A CLI orchestrator for supervising AI coding tools."
authors = [
    { name = "AIAgent Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.0"
]

[project.scripts]
aiagent-orchestrator = "ai_orchestrator.cli:main"
